# base64-decoder-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: base64_parser.rs  decoding_guesser.rs  lib.rs  main.rs  phrase_reduction.rs  phrase_solving.rs  tool_args.rs
src/bins/bruteforce-base64/: main.rs  tool_args.rs
src/phrase/: mod.rs  schema.rs
src/phrase/reduction/: by_halves.rs  by_pairs.rs  by_stream.rs  mod.rs  reduce_to_end.rs
src/phrase/schema/: mod.rs  snippet.rs  variation.rs
src/phrase/validation/: mod.rs  ollama.rs
