[package]
name = "base64-bruteforcer-rs"
version = "4.0.0"
edition = "2024"
authors = ["Nick Cottrell <Captain Jabberjay>"]
description = "Decrypts a lowered base64 string to get its original contents"
readme = "README.md"
license = "GPL 3.0"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
test = true
doctest = true
bench = true
doc = true

[[bin]]
name = "bruteforce-base64"
path = "src/bins/bruteforce-base64/main.rs"
required-features = ["bin"]
test = true
doctest = true
bench = true
doc = true

[dependencies]
async-trait = { version = "0.1.89", optional = true }
base64 = "0.22.1"
byteorder = "1.5.0"
clap = { version = "4.5.53", optional = true }
clap-verbosity-flag = { version = "3.0.2", default-features = false, optional = true }
env_logger = { version = "0.11.8", optional = true }
futures = { version = "0.3.31", optional = true }
itertools = "0.14.0"
log = "0.4.29"
ollama-rs = { version = "0.3.3", optional = true }
patharg = { version = "0.4.1", optional = true }
rayon = { version = "1.11.0", optional = true }
serde_json = { version = "1.0.145", optional = true }
tokio = { version = "1.48.0", optional = true }
tokio-macros = { version = "2.6.0", optional = true }
tokio-rayon = { version = "2.1.0", optional = true }
url = { version = "2.5.7", optional = true }
whatlang = { version = "0.18.0", optional = true }

[features]
default = ["rayon", "whatlang"]
bin = ["dep:env_logger", "clap/derive", "clap-verbosity-flag/log", "dep:serde_json", "tokio/rt-multi-thread", "tokio/macros", "dep:tokio-rayon", "patharg/tokio"]
rayon = ["dep:rayon"]
whatlang = ["dep:whatlang"]
async = ["dep:futures", "dep:async-trait"]
ollama = ["ollama-rs/rustls", "async", "dep:url", "dep:serde_json"]
